Update Example Elgin Tef Web

--- a/Exemplo TEF Web/index.html
+++ b/Exemplo TEF Web/index.html
@@ -92,6 +92,24 @@
                 </div>
             </div>
 
+            <div class="card" onclick="intpos_venda()">
+                <div class="card-top">
+                    <i icon-name="grid" class="icon"></i>
+                </div>
+                <div class="card-content">
+                    <h3>IntPos Venda</h3>
+                </div>
+            </div>
+
+            <div class="card" onclick="intpos_adm()">
+                <div class="card-top">
+                    <i icon-name="grid" class="icon"></i>
+                </div>
+                <div class="card-content">
+                    <h3>IntPos ADM</h3>
+                </div>
+            </div>
+
         </div>
     </main>
     
