Update Example TEF Web

--- a/Exemplo TEF Web/index.html
+++ b/Exemplo TEF Web/index.html
@@ -92,6 +92,15 @@
                 </div>
             </div>
 
+            <div class="card" onclick="pix()">
+                <div class="card-top">
+                    <i icon-name="x-circle" class="icon"></i>
+                </div>
+                <div class="card-content">
+                    <h3>PIX</h3>
+                </div>
+            </div>
+
             <div class="card" onclick="intpos_venda()">
                 <div class="card-top">
                     <i icon-name="grid" class="icon"></i>
