--- a/Exemplo TEF Web/index.html
+++ b/Exemplo TEF Web/index.html
@@ -94,7 +94,7 @@
 
             <div class="card" onclick="pix()">
                 <div class="card-top">
-                    <i icon-name="x-circle" class="icon"></i>
+                    <i icon-name="landmark" class="icon"></i>
                 </div>
                 <div class="card-content">
                     <h3>PIX</h3>
@@ -103,7 +103,7 @@
 
             <div class="card" onclick="intpos_venda()">
                 <div class="card-top">
-                    <i icon-name="grid" class="icon"></i>
+                    <i icon-name="x-circle" class="icon"></i>
                 </div>
                 <div class="card-content">
                     <h3>IntPos Venda</h3>
@@ -112,7 +112,7 @@
 
             <div class="card" onclick="intpos_adm()">
                 <div class="card-top">
-                    <i icon-name="grid" class="icon"></i>
+                    <i icon-name="x-circle" class="icon"></i>
                 </div>
                 <div class="card-content">
                     <h3>IntPos ADM</h3>
